fixes pics on smaller viewports?

--- a/css/skin.css
+++ b/css/skin.css
@@ -2572,7 +2572,7 @@ only screen and (				min-resolution: 2dppx) {
 		background-image: url(../images/generic/hero-half-5@2x.jpg);
 	}
 	.hero-5-about-2 > .row:after{
-		background-image: url(../images/team/hero-half-2@2x.jpg);
+		background-image: url(../images/rsz_me_lying.jpg);
 	}
 	.hero-5-about-3 > .row:after{
 		background-image: url(../images/team/hero-half-3@2x.jpg);
